# platosku2

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md  make_sound_variants.sh  ui_sprite_creator.py
.github/workflows/: ci.yml
assets/: atlas.json  bat.aseprite  character.aseprite  palette.aseprite  slime.aseprite  tile_backgrounds.aseprite  tilemap16.aseprite
assets/sounds/: README.md
assets/sprites/: box.aseprite  burrower.aseprite  character.aseprite  coin.aseprite  door.aseprite  green_projectile.aseprite  large_stone.aseprite  mage.aseprite  mage_projectile.aseprite  small_stone.aseprite  tiles.aseprite  worm.aseprite
rooms/: room_0001.json  room_0002.json  room_0003.json  room_0004.json  room_0005.json  room_0006.json  room_0007.json  room_0008.json  room_0009.json  room_0010.json  room_0011.json
src/: atlas_info.rs  camera.rs  debug_menu.rs  main.rs  minimap.rs  physics.rs  render.rs  sound_handler.rs  state.rs
src/debug_menu/: common.rs  editor.rs  game.rs  mod.rs
src/state/: animation_handler.rs  coin.rs  common.rs  enemies.rs  game_map.rs  game_state.rs  item.rs  mod.rs  player.rs
src/state/enemies/: bat.rs  burrower.rs  common.rs  mage.rs  mod.rs  slime.rs  worm.rs
src/state/map_like/: common.rs  game_map.rs  mod.rs  room.rs
