[package]
name = "platosku2"
version = "0.1.0"
edition = "2024"

[dependencies]
miniquad = "0.4.8"
image = { version = "0.24", default-features = false, features = ["png"] }
rand = "0.9.2"
egui-miniquad = "0.16.0"
egui = "0.31.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
